rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: go-demo
spec:
  replicas: 3
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: { duration: 30s }
        - setWeight: 60
        - pause: { duration: 60s }
        - setWeight: 100
  selector:
    matchLabels:
      app: go-demo
  template:
    metadata:
      labels:
        app: go-demo
    spec:
      containers:
        - name: go-demo
          image: sharmachandan487/go-demo:latest
          ports:
            - containerPort: 8085
