service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-demo
spec:
  selector:
    app: go-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
